# dds-filetransfer

./: .gitignore  CMakeLists.txt
Win_publisher/: .gitignore  Win_publisher.sln  Win_publisher.vcxproj  Win_publisher.vcxproj.filters  publisher.c
Win_subscriber/: FTP.h  VortexLite_c99_release.props  Win_subscriber.sln  Win_subscriber.vcxproj  Win_subscriber.vcxproj.filters  subscriber.c
idl/: FTP.c  FTP.idl
publisher/: publisher.c
subscriber/: subscriber.c
